# aaa-client-monitor

./: CMakeLists.txt  README
cmake/: FindXrootd.cmake
spec/: aaa-client-monitor.spec
src/: AaaClientMonitor.cc  AaaClientMonitor.hh
